updated controller paths in the docs
